// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Action: Current User get 1`] = `
Array [
  Object {
    "meta": Object {
      "method": "GET",
      "url": "/v1/users/bkemper",
    },
    "type": "GET_CURRENT_USER",
  },
]
`;

exports[`Action: Current User getGrantsFromCookie with grants 1`] = `
Array [
  Object {
    "payload": Array [
      Object {
        "key": "test/grant",
      },
    ],
    "type": "GET_GRANTS_SUCCESS",
  },
]
`;

exports[`Action: Current User getGrantsFromCookie without grants 1`] = `
Array [
  Object {
    "payload": Array [],
    "type": "GET_GRANTS_SUCCESS",
  },
]
`;

exports[`Action: Current User updateUserUIOptions with updates 1`] = `
Array [
  Object {
    "meta": Object {
      "data": Object {
        "options": Object {
          "ui": Object {
            "example": "test",
          },
        },
      },
      "method": "PUT",
      "url": "/v1/users/bkemper",
    },
    "type": "UPDATE_USER_UI_OPTIONS",
  },
]
`;
